Добавил файл index.js и js код в index.html

--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,11 @@
             </tr>
         </table>
 
+        <script>
+            console.log("Я смог");
+        </script>
+
+        <script src="index.js"></script>
+
     </body>
 </html>
